Работа над ошибками. Использовал оператор Set.of() для инициализации сэтов. Удалил одноразовые булен переменные для сокращения кода. Переместил инициализацию значений в конструкторе после проверок для оптимизации кода.